--- a/package.json
+++ b/package.json
@@ -20,10 +20,11 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "fs": "^0.0.1-security",
-    "mongoose": "^6.8.0",
+    "mongoose": "^6.8.1",
     "morgan": "~1.9.1",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "razorpay": "^2.8.4"
   }
 }
